tests/snapshots/ui_restore__confirm_overwrite_07.snap
---
source: tests/ui_restore.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              on disk
  ○        ○ ○ ○    ○   ○  ○     ○    ○         ○   ●·○ · ○ ·  ·○  · ·● ·  ·  ┊ ○ server.go  ○ src/
                                                      ▲                                    − 1× +

 on disk  ~1          │   ..                                   │ server.go · v1/2 · 30…  ⇥ content
   ┄ 2 unchanged ┄    │ ▸ api/                                 │ unchanged since Sep 06 18:03
 Sep 27 08:52 ~1      │ ▸ models/                              │
   ┄ 2 unchanged ┄    │ ◇ config.go                    89 B    │   1  package main
 Sep 20 20:35 ~1      │ ◇ main.go                     108 B  ~ │   2
   ┄ 2 unchanged ┄    │ ◇ server.go                    30 B    │   3  func serve() {}
 Sep 13 20:51 ~2      ╭─ Overwrite? ─────────────────────────────────────────╮
   ┄ 1 unchanged ┄    │                                                      │
▶Sep 09 19:23 ~1      │  Replace 2 items on disk with the version from Sep   │
   ┄ 1 unchanged ┄    │  09 19:23? The current version is kept for :undo.    │
 Sep 06 18:03 +1~3−1  │                                                      │
   ┄ 2 unchanged ┄    │  [y] Overwrite   [n] Cancel                          │
 Sep 02 20:16 ~1      ╰──────────────────────────────────────────────────────╯
   ┄ 2 unchanged ┄    │                                        │
 Aug 22 11:59 ~2−1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │
 Jul 26 11:57 ~1      │                                        │
 Jul 24 12:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Jul 14 09:00 +7      │                                        │
                      │   2 deleted · . to show                │
 NOR  Sep 09 19:23  811fc3af  src/ ~1  2 yanked                           Sep 06 18:03  5/6  ? help
