tests/snapshots/ui_restore__going_back_to_the_picker_during_a_restore_asks.snap
---
source: tests/ui_restore.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              on disk
  ● ·   ·  ○ ● ○  · ○   ○  ○·    ○ ·  ● ·  ·    ○· ·●·○ · ○ ·  ·●  · ·○ ·  ·  ┊ ○ config.go  ○ src/
                                                      ▲                                    − 1× +

 on disk  ~1          │   ..                                   │ config.go · v4/5 · 89…  ⇥ content
   ┄ 2 unchanged ┄    │ ▸ api/                                 │ unchanged since Sep 06 18:03
 Sep 27 08:52 ~1      │ ▸ models/                              │
   ┄ 2 unchanged ┄    │ ◇ config.go                    89 B    │   1  package main
 Sep 20 20:35 ~1      │ ◇ main.go                     108 B  ~ │   2
   ┄ 2 unchanged ┄    │ ◇ server.go                    30 B    │   3  type Config struct {
 Sep 13 20:51 ~2      ╭─ Back to the picker? ────────────────────────────────╮nt
   ┄ 1 unchanged ┄    │                                                      │
▶Sep 09 19:23 ~1      │  A restore is running. config.go is being prepared.  │lts
   ┄ 1 unchanged ┄    │  Nothing will be overwritten.                        │uts
 Sep 06 18:03 +1~3−1  │                                                      │n address
   ┄ 2 unchanged ┄    │  [y] Stop and go back   [n] Keep going               │
 Sep 02 20:16 ~1      ╰──────────────────────────────────────────────────────╯
   ┄ 2 unchanged ┄    │                                        │
 Aug 22 11:59 ~2−1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │
 Jul 26 11:57 ~1      │                                        │
 Jul 24 12:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Jul 14 09:00 +7      │                                        │
                      │   2 deleted · . to show                │
 NOR  restoring config.go … preparing  esc stop                           Sep 06 18:03  3/6  ? help
