tests/snapshots/ui_restore__selection_05.snap
---
source: tests/ui_restore.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src                                                   ◀ version 12 of 15 ▶
  Jul 2026        Aug                         Sep                              now
  ● ·   ·  ● ● ●  · ●   ●  ●·    ● ·  ● ·  ·    ●· ·●·● · ● ·  ·●  · ·● ·  ·  ┊ ● src/
                                                    •·· · · ·  ··  · ·• ·  ·  ┊ · server.go
                                                      ▲                                    − 1× +

 now  ~1 unsaved      │   ..                              │ server.go · v1/2 · 30 B      ⇥ content
   ┄ 2 unchanged ┄    │ ▸ api/                            │ unchanged since Sep 06 18:03
 Sep 27 08:52 ~1      │ ▸ models/                         │
   ┄ 2 unchanged ┄    │┃◇ config.go           89 B        │   1  package main
 Sep 20 20:35 ~1      │┃◇ main.go            108 B  ~     │   2
   ┄ 2 unchanged ┄    │ ◇ server.go           30 B        │   3  func serve() {}
 Sep 13 20:51 ~2      │ ◇ util.go             94 B        │
   ┄ 1 unchanged ┄    │                                   │
▶Sep 09 19:23 ~1      │                                   │
   ┄ 1 unchanged ┄    │                                   │
 Sep 06 18:03 +1~3−1  │                                   │
   ┄ 2 unchanged ┄    │                                   │
 Sep 02 20:16 ~1      │                                   │
   ┄ 2 unchanged ┄    │                                   │
 Aug 22 11:59 ~2−1    │                                   │
   ┄ 1 unchanged ┄    │                                   │
 Aug 17 16:04 +1~1    │                                   │
   ┄ 1 unchanged ┄    │                                   │
 Aug 10 15:44 ~1      │                                   │
 Aug 07 08:15 +1      │                                   │
 Aug 03 16:19 +1~1    │                                   │
   ┄ 1 unchanged ┄    │                                   │
 Jul 28 15:59 ~1      │                                   │
 Jul 26 11:57 ~1      │                                   │
 Jul 24 12:16 ~1      │                                   │
   ┄ 2 unchanged ┄    │                                   │
 Jul 14 09:00 +7      │   2 deleted · . to show           │
 SEL  Sep 09 19:23  811fc3af  src/ ~1                                     Sep 06 18:03  5/6  ? help
