tests/snapshots/ui_restore__stop_restore_18-2.snap
---
source: tests/ui_restore.rs
expression: "status(&mut h, 100)"
---
 NOR  stopping after config.go…                                           Sep 09 19:23  4/6  ? help
