tests/snapshots/ui_restore__stop_restore_18.snap
---
source: tests/ui_restore.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              on disk
  ● ·   ·  ● ○ ○  · ●   ○  ○·    ● ·  ○ ·  ·    ●· ·●·● · ○ ·  ·○  · ·○ ·  ·  ┊ ● main.go  ○ src/
                                                      ▲                                    − 1× +

 on disk  ~1          │   ..                                   │ main.go · v7/7 · 108 B  ⇥ content
   ┄ 2 unchanged ┄    │ ▸ api/                                 │ changed here · + new line · − remo…
 Sep 27 08:52 ~1      │ ▸ models/                              │
   ┄ 2 unchanged ┄    │ ◇ config.go                    89 B    │   1  package main
 Sep 20 20:35 ~1      │ ◇ main.go                     108 B  ~ │   2
   ┄ 2 unchanged ┄    │ ◇ server.go                    30 B    │   3  func main() {
 Sep 13 20:51 ~2      ╭─ Stop restoring? ────────────────────────────────────╮
   ┄ 1 unchanged ┄    │                                                      │
▶Sep 09 19:23 ~1      │  config.go is 25% done. The partly restored copy is  │
   ┄ 1 unchanged ┄    │  removed.                                            │eware
 Sep 06 18:03 +1~3−1  │                                                      │re flag
   ┄ 2 unchanged ┄    │  [y] Stop   [n] Keep going                           │ls
 Sep 02 20:16 ~1      ╰──────────────────────────────────────────────────────╯
   ┄ 2 unchanged ┄    │                                        │  11+ // shutdown
 Aug 22 11:59 ~2−1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │
 Jul 26 11:57 ~1      │                                        │
 Jul 24 12:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Jul 14 09:00 +7      │                                        │
                      │   2 deleted · . to show                │
 NOR  restoring config.go  ━━━━────────────  25%  1 B / 4 B  esc stop     Sep 09 19:23  4/6  ? help
