tests/snapshots/ui_restore__yank_toast_06.snap
---
source: tests/ui_restore.rs
assertion_line: 25
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src                                                   ◀ version 12 of 15 ▶
  Jul 2026        Aug                         Sep                              now
  ○        ○ ○ ○    ○   ○  ○     ○    ○         ○   ●·○ · ○ ·  ·○  · ·● ·  ·  ┊ ○ server.go  ○ src/
                                                      ▲                                    − 1× +

 now  ~1 unsaved      │   ..                     ╭────────────────────────────────────────────────╮
   ┄ 2 unchanged ┄    │ ▸ api/                   │ Yanked 2 items from Sep 09 19:23. p restores   │
 Sep 27 08:52 ~1      │ ▸ models/                │ next to the original, P overwrites.            │
   ┄ 2 unchanged ┄    │ ◇ config.go           89 ╰────────────────────────────────────────────────╯
 Sep 20 20:35 ~1      │ ◇ main.go            108 B  ~     │   2
   ┄ 2 unchanged ┄    │ ◇ server.go           30 B        │   3  func serve() {}
 Sep 13 20:51 ~2      │ ◇ util.go             94 B        │
   ┄ 1 unchanged ┄    │                                   │
▶Sep 09 19:23 ~1      │                                   │
   ┄ 1 unchanged ┄    │                                   │
 Sep 06 18:03 +1~3−1  │                                   │
   ┄ 2 unchanged ┄    │                                   │
 Sep 02 20:16 ~1      │                                   │
   ┄ 2 unchanged ┄    │                                   │
 Aug 22 11:59 ~2−1    │                                   │
   ┄ 1 unchanged ┄    │                                   │
 Aug 17 16:04 +1~1    │                                   │
   ┄ 1 unchanged ┄    │                                   │
 Aug 10 15:44 ~1      │                                   │
 Aug 07 08:15 +1      │                                   │
 Aug 03 16:19 +1~1    │                                   │
   ┄ 1 unchanged ┄    │                                   │
 Jul 28 15:59 ~1      │                                   │
 Jul 26 11:57 ~1      │                                   │
 Jul 24 12:16 ~1      │                                   │
   ┄ 2 unchanged ┄    │                                   │
 Jul 14 09:00 +7      │                                   │
                      │   2 deleted · . to show           │
 NOR  Sep 09 19:23  811fc3af  src/ ~1  2 yanked                           Sep 06 18:03  5/6  ? help
